# Gaussian-Elimination

./: .gitignore  Cargo.toml  README.md
src/: gauss.rs  lib.rs  main.rs  matrix.rs
src/gauss/: fraction.rs  test.rs
src/matrix/: fraction.rs
