[package]
name = "zeuhl_sem"
version = "0.2.5"
edition = "2024"

description = "A sem (Simultaneous Equation Model) that has the ability to solve equations using Gaussian elimination or Jacobi methods."

documentation = "https://docs.rs/zeuhl_matrix/"
homepage = "https://crates.io/crates/zeuhl_matrix"
repository = "https://github.com/ZeuhL202/Matrix-Solving"

readme = "README.md"

categories = ["mathematics"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
zeuhl_fraction = "0.1.0"
